--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ staticman:
   moderation             : true
   path                   : "_data/comments/{options.slug}"
   requiredFields         : ['name', 'email', 'message']
-  transforms:
+  transforms: duncanc@andrew.cmu.edu
     email                : "md5"
   generatedFields:
     date:
